--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   equatable: ^2.0.3
   flutter_bloc: ^8.0.1
   flutter_i18n: ^0.32.2
+  go_router: ^3.1.1
 
 dev_dependencies:
   flutter_test:
