--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,16 @@ environment:
   sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.5
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.1
+  flutter_i18n: ^0.32.4
   flutter_localizations:
     sdk: flutter
-  cupertino_icons: ^1.0.4
-  equatable: ^2.0.3
-  flutter_bloc: ^8.0.1
-  flutter_i18n: ^0.32.2
-  go_router: ^3.1.1
+  go_router: ^4.0.0
+  very_good_analysis: ^3.0.1
 
 dev_dependencies:
   flutter_test:
