--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   go_router: ^4.0.0
+  mocktail: ^0.3.0
   very_good_analysis: ^3.0.1
 
 dev_dependencies:
+  bloc_test: ^9.0.3
   flutter_test:
     sdk: flutter
 
